SeatPM_Workspace_Folder/SeatPM_Project.cydsn/BUILD.log
--------------- Build Started: 07/19/2020 16:24:38 Project: SeatPM_Project, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I.\Austins_Component_Drivers -I.\Austins_Component_Drivers\Goniometer -I.\Austins_Component_Drivers\Goniometer\Acceleration_Vector -I.\Austins_Component_Drivers\Goniometer\ADXL345 -I.\Austins_Component_Drivers\Goniometer\Moving_Average_Filter -I.\Austins_Component_Drivers\User_Interface -I.\Austins_Component_Drivers\User_Interface\Finite_State_Machine -I.\Austins_Component_Drivers\User_Interface\UI_Buttons -I.\Austins_Component_Drivers\Goniometer\Accelerometer -I.\Austin_Parameter -I.\Austins_Component_Drivers\User_Interface\CPM_Runtime -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Os -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:134:76: error: 'Degrees' undeclared (first use in this function)
         bool IsCurrentKneeAngleValid = Parameter_SetValue(&g_CurrentAngle, Degrees);
                                                                            ^
main.c:134:76: note: each undeclared identifier is reported only once for each function it appears in
main.c: At top level:
main.c:333:1: error: expected identifier or '(' at end of input
 double 
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 07/19/2020 16:24:40 ---------------
